# bloomeomcp

./: .gitignore  README.md  pyproject.toml
mcp_bloomeo/: __init__.py  __main__.py  client.py  fastmcp_server.py  models.py
